Fix waypoints not displaying due to being loaded faster than images and being placed behind them

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -39,6 +39,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 8px;
+    z-index: 1;
 }
 
 .waypoint-text {
